Création système de plaintes intra gn

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,9 +3,7 @@ security:
         App\Entity\User:
             algorithm: auto
 
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
@@ -23,21 +21,15 @@ security:
                     - App\Security\SecAuthenticator
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
-
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: intranet/civil, roles: ROLE_CIVIL }
+        - { path: intranet/gendarmerie, roles: ROLE_GENDARME }
+        - { path: intranet/gendarmerie/psig, roles: ROLE_PSIG }
+        - { path: intranet/gendarmerie/sr, roles: ROLE_SR }
 
     role_hierarchy:
         ROLE_CIVIL: IS_AUTHENTIFICATED_ANONYMOUSLY
+        ROLE_PSIG: [ROLE_GENDARMERIE, ROLE_CIVIL]
+        ROLE_SR: [ROLE_GENDARMERIE, ROLE_CIVIL]
