--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=7ae66581fe26f8e1dc20e4e9d8abe1c1
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://root:@127.0.0.1:3306/dessanco?serverVersion=5.7"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/hardesia?serverVersion=5.7"
 #DATABASE_URL="postgresql://root:@127.0.0.1:5432/dessanco?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
